--- a/css/estilos.css
+++ b/css/estilos.css
@@ -56,3 +56,31 @@
     padding: 15px;
     flex-grow: 1;
 }
+
+/* Mantener el header estatico */
+
+
+.sticky-header {
+    position: sticky;
+    top: 0;
+    z-index: 100;
+}
+
+.sticky-header h1 {
+    margin: 0;
+}
+
+.sticky-header nav ul {
+    list-style: none;
+    padding: 0;
+    margin: 0;
+}
+
+.sticky-header nav ul li {
+    display: inline;
+    margin-right: 20px;
+}
+
+.sticky-header nav ul li:last-child {
+    margin-right: 0;
+}
