--- a/css/index.css
+++ b/css/index.css
@@ -34,11 +34,11 @@ header{
     text-align: center;
     font-weight: bold;
     font-style: italic;
-    font-size: 30px;
+    font-size: 6px;
 }
 
 .subtitulo{
-    font-size: 20px;
+    font-size: 4vh;
 }
 
 
