--- a/carrusel/css/estilos.css
+++ b/carrusel/css/estilos.css
@@ -6,7 +6,7 @@
 
 body { 
     min-height: 100vh;
-    background-image: linear-gradient(-45deg, #e3ddd9 50%, #1d2947 50%);
+    background-image: linear-gradient(-45deg, #273966 50%, #1d2947 50%);
     font-family: 'Raleway', sans-serif;
 }
 
@@ -30,9 +30,9 @@ body {
 .subtitulo_imagen { 
     color: #fff;
     margin: 7px 0;
-    font-size: 4vh;
+    font-size: 3vh;
     font-weight: 600;
-    font-family: 'Dancing Script';
+    text-shadow: 2px 2px 4px rgba(0, 0, 0, 1);
 }
 
 /* ------------------------ */
